--- a/android/res/layout/fragment_newcustomer.xml
+++ b/android/res/layout/fragment_newcustomer.xml
@@ -8,6 +8,12 @@
     <TextView
         android:text="Create new customer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
+
+    <EditText
+        android:id="@+id/newcustomer_name"
+        android:inputType="text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
