--- a/android/res/layout/fragment_jobstarter.xml
+++ b/android/res/layout/fragment_jobstarter.xml
@@ -14,4 +14,14 @@
             android:layout_height="wrap_content"
             android:text="@string/main_label_project"/>
 
+    <Spinner
+            android:id="@+id/customer_selector"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"/>
+
+    <Spinner
+            android:id="@+id/project_selector"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"/>
+
 </LinearLayout>
